--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  background:radial-gradient(50% 50% at 50% 50%, #273B50 0%, rgba(19, 27, 44, 0) 100%), linear-gradient(180deg, #0C0E22 0%, #0D091B 100%);
 }
 
 .center {
@@ -21,3 +22,4 @@
   font-size: 32px;
   font-weight: 400;
 }
+
