feat: change screen less than 800px style add logo animation

--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -7,6 +7,18 @@
     padding-top: 45px;
 }
 
+.full_logo{
+    width: auto;
+    display: block;
+}
+
+.logo{
+    width: auto;
+    display: none;
+    -webkit-animation: rotate-scale-up 0.65s linear both;
+	        animation: rotate-scale-up 0.65s linear both;
+}
+
 .btn{
     width:122px;
     height:26px;
@@ -16,4 +28,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width:800px) {
+    .full_logo{
+        display: none;
+    }
+    
+    .logo{
+        display: block;
+    }
+}
+
+@-webkit-keyframes rotate-scale-up {
+    0% {
+      -webkit-transform: scale(1) rotateZ(0);
+              transform: scale(1) rotateZ(0);
+    }
+    50% {
+      -webkit-transform: scale(2) rotateZ(180deg);
+              transform: scale(2) rotateZ(180deg);
+    }
+    100% {
+      -webkit-transform: scale(1) rotateZ(360deg);
+              transform: scale(1) rotateZ(360deg);
+    }
+}
+
+@keyframes rotate-scale-up {
+    0% {
+        -webkit-transform: scale(1) rotateZ(0);
+                transform: scale(1) rotateZ(0);
+    }
+    50% {
+        -webkit-transform: scale(2) rotateZ(180deg);
+                transform: scale(2) rotateZ(180deg);
+    }
+    100% {
+        -webkit-transform: scale(1) rotateZ(360deg);
+                transform: scale(1) rotateZ(360deg);
+    }
 }
